infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marscast
  labels:
    app.kubernetes.io/name: marscast
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts: []
      secretName: marscast-tls
  rules: []
